<resources>
    <string name="app_name">"MenuFragment"</string>
    <string name="nav_drawer_open">Mostrar Navegación</string>
    <string name="nav_drawer_close">Ocultar Navegación</string>
    <string name="camara">Cámara</string>
    <string name="gallery">Galería</string>
    <string name="agenda">Agenda</string>
    <string name="manage">Configuración</string>
    <string name="titulo_item"></string>
    <string name="share">Compartir</string>
    <string name="send">Enviar</string>
    <string name="HomeFragment">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello this is a fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="large_text">
        Fragmento Galería
    </string>
</resources>