<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/camara" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/gallery" />
</group>

<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_agenda"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/agenda" />
    <item
        android:id="@+id/nav_manage"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/manage" />
</group>

<item android:title="@string/titulo_item">
    <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/send" />

        </group>
    </menu>
</item>


</menu>